# zila

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
examples/: Cargo.toml  README.md  call_every_day.rs  call_every_day_async.rs  call_every_day_async_mut.rs  call_every_day_mut.rs  call_every_hour.rs  call_every_hour_async.rs  call_every_hour_async_mut.rs  call_every_hour_mut.rs  call_every_minute.rs  call_every_minute_async.rs  call_every_minute_async_mut.rs  call_every_minute_mut.rs  call_every_second.rs  call_every_second_async.rs  call_every_second_async_mut.rs  call_every_second_mut.rs  duration_to_next_day.rs  duration_to_next_hour.rs  duration_to_next_minute.rs  duration_to_next_second.rs  set_interval.rs  set_interval_async.rs  set_interval_async_mut.rs  set_interval_mut.rs  set_timeout.rs  set_timeout_async.rs  set_timeout_async_mut.rs  set_timeout_mut.rs
src/: lib.rs
