[package]
name = "zila"
version = "0.1.5"
description = "A library for calling functions on certain events"
license-file = "LICENSE"
license = "MIT"
documentation = "https://docs.rs/zila/0.1.5"
repository = "https://github.com/a-rustacean/zila"
authors = ["Dilshad <dilshadplayingminecraft@outlook.com>"]
edition = "2021"

[dependencies]
chrono = "0.4.24"
tokio = { version = "1.28.0", features = ["time"] }

[features]
day = []
hour = []
minute = []
second = []
timeout = []
interval = []
