[package]
name = "zila"
version = "0.1.8"
description = "A library for calling functions on certain events"
license = "MIT"
documentation = "https://docs.rs/zila/0.1.8"
repository = "https://github.com/a-rustacean/zila"
authors = ["Dilshad <a-rustacean@outlook.com>"]
edition = "2021"
keywords = ["event", "timeout", "interval", "everyday"]

[dependencies]
chrono = "0.4.24"
tokio = { version = "1.38.2", features = ["time"] }

[features]
day = []
hour = []
minute = []
second = []
timeout = []
interval = []

default = []

full = [
  "day",
  "hour",
  "minute",
  "second",
  "timeout",
  "interval"
]
# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
